WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68785
DFG JIT does not count speculation successes correctly
https://bugs.webkit.org/show_bug.cgi?id=68785
Summary
DFG JIT does not count speculation successes correctly
Filip Pizlo
Reported
2011-09-25 19:44:36 PDT
Speculation successes are counted in the code block entry code, which is skipped in the case of function code.
Attachments
the patch
(2.67 KB, patch)
2011-09-25 19:46 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-25 19:46:08 PDT
Created
attachment 108621
[details]
the patch
Geoffrey Garen
Comment 2
2011-09-25 20:08:40 PDT
Comment on
attachment 108621
[details]
the patch r=me
Filip Pizlo
Comment 3
2011-09-25 21:05:00 PDT
Landed in
r95933
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug