DFG JIT does not count speculation successes correctly https://bugs.webkit.org/show_bug.cgi?id=68785

Reviewed by Geoffrey Garen.

* dfg/DFGJITCompiler.cpp:
(JSC::DFG::JITCompiler::compileEntry):
(JSC::DFG::JITCompiler::compileBody):
* dfg/DFGOperations.cpp:



Canonical link: https://commits.webkit.org/84751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95933 268f45cc-cd09-0410-ab3c-d52691b4dbfc